# starline-optimizer

./: .dockerignore  Dockerfile  README.md  directDatabaseAccess.py  docker-compose.dev.yml  docker-compose.yml  main.py  newmain.py  output.txt  portfolio_weights1.csv  pyproject.toml  requirements.txt  test_risk.py
.github/workflows/: docker-ci.yaml
sector_prices_presentation/: XLB.csv  XLC.csv  XLE.csv  XLF.csv  XLI.csv  XLK.csv  XLP.csv  XLRE.csv  XLU.csv  XLV.csv  XLY.csv
starline_optimizer/: __init__.py  clickhouse.py  clickhouse_globals.py  clickhouse_timeseries.py  data_provider.py  engine.py  env.py  logger.py  runner.py  threshold_constraints.py
