[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "starline_optimizer"
version = "1.0.0"
description = "SSMIF convex optimization program built using cvxportfolio."
authors = [ "SSMIF Quant Dev" ]
packages = [
    { include = "starline_optimizer/" }
]

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
isort = "^6.0.0"

[tool.black]
line-length = 100
target-version = ["py313"]
